--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search">Search</string>
     <string name="tab_1">Followers</string>
     <string name="tab_2">Following</string>
+    <string name="favorite">Favorite</string>
 </resources>
